--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header start -->
     <header>
       <nav>
-        <h3 class="nav-title">G3 Architects</h3>
+        <h3 class="section-title">G3 Architects</h3>
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
@@ -44,7 +44,75 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-
+            <!-- features section -->
+            <section class="features">
+                <div class="feature-content">
+                    <h3 class="section-title">Features you will <br> love & enjoy</h3>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                </div>
+                <div class="feature-img">
+                    <img src="images/architect.png" alt="">
+                    <div class="ten-years-badge">
+                        <h2>10+ years</h2>
+                        <p>Experience</p>
+                    </div>
+                </div>
+           </section>
+            <!-- facts section  -->
+         <section class="facts-container">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gry">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-light-gry">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-light-gry">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-light-gry">Email Send</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-light-gry">Clients Worked</p>
+                </div>
+            </div>
+         </section>
+          <!-- sponsors section -->
+           <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
   </body>
